# exercise-heap

./: .gitignore  CHANGELOG.md  README.md  exercise_ideas.md  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml  import.yaml
exercises/2021/01_01_helloworld/: helloworld.md
exercises/2021/01_02_prozente/: prozente.md
exercises/2021/01_03_warscheinlichkeit/: wahrscheinlichkeit.md
exercises/2021/01_04_what_if/: what_if.md
exercises/2021/01_05_what_if2/: what_if2.md
exercises/2021/01_06_variablenzoo/: variablenzoo.md
exercises/2021/01_07_unicode/: unicode.md
exercises/2021/01_08_begrüßung/: begrüßung.md
exercises/2021/01_09_einrückung/: einrückung.md
exercises/2021/02_01_sub_list/: sub_list.md
exercises/2021/02_02_fake_statistics/: fake_statistics.md
exercises/2021/02_03_even_sum/: even_sum.md
exercises/2021/02_04_divisor_sum/: divisor_sum.md
exercises/2021/02_05_simple_mean/: simple_mean.md
notes/: chat_gpt_prompts.md  exercise_ideas.md
notes/raw_chatgpt_responses/: cosine_similarity_raw.md  is_anagram_raw.md  ngram_raw.md  pig_latin_raw.md  vowel_counter_raw.md  word_frequency_raw.md  word_wrap_raw.md
python_api/exercise_heap/: description.py  header.py
scripts/: ideas.md
scripts/export/: export_dozeloc.py
scripts/generation/: chatgpt_extract.py
scripts/import/: import_aud.py  import_dozeloc.py  import_tex.py  porty.py
scripts/metadata/: add_uuid.py  check_uuids.py  create_tagnames.py  requirements.txt  suggest_tags.py
scripts/translate/: requirements.txt  translate_exercise_text.py
test/data/events/: issues.json  (+2 more)
(+576 files in other folders)
